--- a/文档/2.QtDesigner.md
+++ b/文档/2.QtDesigner.md
@@ -30,14 +30,20 @@ $ pyuic5 demo.ui -o demo.py
 /home/thanlon/.local/share/virtualenvs/pyqt5-pro-ihgfaRRJ/bin/python
 ```
 将其复制粘贴到【Program】部分。然后再把 **`-m PyQt5.uic.pyuic $FileName$ -o $FileNameWithoutExtension$.py`** 加入到【Arguments】部分。再把 **`$FileDir$`** 加入到【Working directory】中：
+
 ![在这里插入图片描述](https://img-blog.csdnimg.cn/20200830221427681.png?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L1RoYW5sb24=,size_16,color_FFFFFF,t_70#)
+
 转换之后，在项目目录下会生成.py文件：
+
 ![在这里插入图片描述](https://img-blog.csdnimg.cn/20200830220420797.png#)
 
 ###### 2.4 水平布局
 使用水平布局的方式在QtDesigner中做一些简单的操作，如下图所示：
+
 ![在这里插入图片描述](https://img-blog.csdnimg.cn/20200831005410111.png?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L1RoYW5sb24=,size_16,color_FFFFFF,t_70#)
+
 将.ui文件转换成.py文件后新建 **`RunMainWinHorizontalLayout.py`** 文件用来运行转换之后的.py文件 **`MainWinHorizontalLayout.py`**：
+
 ```python
 import sys
 import MainWinHorizontalLayout
@@ -61,8 +67,12 @@ if __name__ == '__main__':
 ![在这里插入图片描述](https://img-blog.csdnimg.cn/20200831010754336.png?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L1RoYW5sb24=,size_16,color_FFFFFF,t_70#)
 ###### 2.5 垂直布局
 使用垂直布局的方式在QtDesigner中了做一些简单的操作，如下图所示：
+
 ![在这里插入图片描述](https://img-blog.csdnimg.cn/20200831011634495.png?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L1RoYW5sb24=,size_16,color_FFFFFF,t_70#)
-将.ui文件转换成.py文件后新建 **`RunMainWinVerticalLayout.py`** 文件用来运行转换之后的.py文件 **`MainWinVerticalLayout.py`**：
+将.ui文件转换成.py文件后新建 **`RunMainWinVerticalLayout.py`** 文件用来运行转换之后的.py文件 
+
+**`MainWinVerticalLayout.py`**：
+
 ```python
 import sys
 import MainWinVerticalLayout
@@ -83,11 +93,16 @@ if __name__ == '__main__':
     sys.exit(app.exec_())
 ```
 运行这个.py文件得到：
+
 ![在这里插入图片描述](https://img-blog.csdnimg.cn/20200831012547133.png?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L1RoYW5sb24=,size_16,color_FFFFFF,t_70#)
+
 ###### 2.6 同时使用水平布局和垂直布局
 “姓名”和“薪资”两行都使用水平布局，“备注+文本框”和它们一起使用垂直布局：
+
 ![在这里插入图片描述](https://img-blog.csdnimg.cn/20200831021549807.png?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L1RoYW5sb24=,size_16,color_FFFFFF,t_70#)
+
 将.ui文件转换成.py文件后新建 **`RunMainWinHVLayout.py`** 文件用来运行转换之后的.py文件：
+
 ```python
 import sys
 import RunMainWinVHLayout
@@ -112,6 +127,7 @@ if __name__ == '__main__':
 下面是使用栅格布局设计的：
 ![在这里插入图片描述](https://img-blog.csdnimg.cn/20200831023151568.png?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L1RoYW5sb24=,size_16,color_FFFFFF,t_70#)
 将.ui文件转换成.py文件后新建 **`RunMainWinGridLayout.py`** 文件用来运行转换之后的.py文件：
+
 ```python
 import sys
 import MainWinGridLayout
@@ -132,3 +148,34 @@ if __name__ == '__main__':
     sys.exit(app.exec_())
 ```
 ![在这里插入图片描述](https://img-blog.csdnimg.cn/20200831023513476.png?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L1RoYW5sb24=,size_16,color_FFFFFF,t_70#)
+
+###### 2.8 表单布局
+
+下面是使用表单布局设计的：
+
+![在这里插入图片描述](https://img-blog.csdnimg.cn/20200902144428605.png?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L1RoYW5sb24=,size_16,color_FFFFFF,t_70#)
+
+将.ui文件转换成.py文件后新建 **`RunMainWinFormLayout.py`** 文件用来运行转换之后的.py文件：
+
+```python
+import sys
+import MainWinFormLayout
+from PyQt5.QtWidgets import QApplication, QMainWindow
+
+if __name__ == '__main__':
+    # 创建QApplication类的实例
+    app = QApplication(sys.argv)
+    # 创建一个主窗口
+    mainWindow = QMainWindow()
+    # 创建Ui_MainWindow的实例
+    ui = MainWinFormLayout.Ui_MainWindow()
+    # 调用setupUi在指定窗口(主窗口)中添加控件
+    ui.setupUi(mainWindow)
+    # 显示窗口
+    mainWindow.show()
+    # 进入程序的主循环，并通过exit函数确保主循环安全结束
+    sys.exit(app.exec_())
+```
+>**右键选择布局的时候选择“在窗体布局中布局”。**
+
+![在这里插入图片描述](https://img-blog.csdnimg.cn/2020090214474383.png?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L1RoYW5sb24=,size_16,color_FFFFFF,t_70#)
